fix: remove the scrollbar with css. Fixes filters making the content shift right as scrollbar disappears and it also looks cleaner

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,6 +32,15 @@ body {
   -moz-user-select: none;
 }
 
+html {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+html::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 #root {
   width: 100%;
 }
